sea-query-derive/tests/compile-fail/path_method.stderr
error: The method attribute only supports the `#[method = "name"]` format
 --> $DIR/path_method.rs:8:7
  |
8 |     #[method]
  |       ^^^^^^
